url version now working

--- a/Detecting Fake News.ipynb
+++ b/Detecting Fake News.ipynb
@@ -24,107 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Daniel Greenfield, a Shillman Journalism Fello...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Google Pinterest Digg Linkedin Reddit Stumbleu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>— Kaydee King (@KaydeeKing) November 9, 2016 T...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>\\nI’m not an immigrant, but my grandparents ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>Share This Baylee Luciani (left), Screenshot o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6326</td>\n",
-       "      <td>DOJ COMPLAINT: Comey Under Fire Over Partisan ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6328</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6329</td>\n",
-       "      <td>Julian Assange has claimed the Hillary Clinton...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6331</td>\n",
-       "      <td>The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6332</td>\n",
-       "      <td>Anti-Trump Protesters Are Tools of the Oligar...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3164 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   text\n",
-       "0     Daniel Greenfield, a Shillman Journalism Fello...\n",
-       "1     Google Pinterest Digg Linkedin Reddit Stumbleu...\n",
-       "3     — Kaydee King (@KaydeeKing) November 9, 2016 T...\n",
-       "5       \\nI’m not an immigrant, but my grandparents ...\n",
-       "6     Share This Baylee Luciani (left), Screenshot o...\n",
-       "...                                                 ...\n",
-       "6326  DOJ COMPLAINT: Comey Under Fire Over Partisan ...\n",
-       "6328                                                   \n",
-       "6329  Julian Assange has claimed the Hillary Clinton...\n",
-       "6331  The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...\n",
-       "6332   Anti-Trump Protesters Are Tools of the Oligar...\n",
-       "\n",
-       "[3164 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "news.loc[news['label'] == 'FAKE',['text']]"
+    "news.loc[news['label'] == 'FAKE',['text']].head(1)"
    ]
   },
   {
